docs/api/qiskit/0.28/qiskit.providers.ibmq.runtime.ParameterNamespace.mdx
---
title: ParameterNamespace (v0.28)
description: API reference for qiskit.providers.ibmq.runtime.ParameterNamespace in qiskit v0.28
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.runtime.ParameterNamespace
---

<span id="qiskit-providers-ibmq-runtime-parameternamespace" />

# qiskit.providers.ibmq.runtime.ParameterNamespace

<Class id="qiskit.providers.ibmq.runtime.ParameterNamespace" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.15/qiskit/providers/ibmq/runtime/runtime_program.py" signature="ParameterNamespace(params)" modifiers="class">
  A namespace for program parameters with validation.

  This class provides a namespace for program parameters with auto-completion and validation support.

  ParameterNamespace constructor.

  **Parameters**

  **params** (`List`\[`ProgramParameter`]) – The program’s input parameters.

  ### \_\_init\_\_

  <Function id="qiskit.providers.ibmq.runtime.ParameterNamespace.__init__" signature="__init__(params)">
    ParameterNamespace constructor.

    **Parameters**

    **params** (`List`\[`ProgramParameter`]) – The program’s input parameters.
  </Function>

  ## Methods

  |                                                                                                                                              |                                 |
  | -------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------- |
  | [`__init__`](#qiskit.providers.ibmq.runtime.ParameterNamespace.__init__ "qiskit.providers.ibmq.runtime.ParameterNamespace.__init__")(params) | ParameterNamespace constructor. |
  | [`validate`](#qiskit.providers.ibmq.runtime.ParameterNamespace.validate "qiskit.providers.ibmq.runtime.ParameterNamespace.validate")()       | Validate program input values.  |

  ## Attributes

  |                                                                                                                                      |                                |
  | ------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------ |
  | [`metadata`](#qiskit.providers.ibmq.runtime.ParameterNamespace.metadata "qiskit.providers.ibmq.runtime.ParameterNamespace.metadata") | Returns the parameter metadata |

  ### metadata

  <Attribute id="qiskit.providers.ibmq.runtime.ParameterNamespace.metadata">
    Returns the parameter metadata

    **Return type**

    `List`\[`ProgramParameter`]
  </Attribute>

  ### validate

  <Function id="qiskit.providers.ibmq.runtime.ParameterNamespace.validate" signature="validate()">
    Validate program input values.

    <Admonition title="Note" type="note">
      This method only verifies that required parameters have values. It does not fail the validation if the namepsace has extraneous parameters.
    </Admonition>

    **Raises**

    **IBMQInputValueError if validation fails** –

    **Return type**

    `None`
  </Function>
</Class>

